@@ -81,7 +81,8 @@ import loadlib
 #
 mode = os.environ['LOADMODE']
 createdBy = os.environ['CREATEDBY']
-passwordFileName = os.environ['MGI_DBPASSWORDFILE']
+user = os.environ['MGD_DBUSER']
+passwordFileName = os.environ['MGD_DBPASSWORDFILE']
 datadir = os.environ['DATADIR']	# directory which contains the data files
 logdir = os.environ['LOGDIR']  # directory which contains the log files
 outCopyrightFileName = os.environ['COPYRIGHTFILE']
@@ -190,6 +191,8 @@ def init():
     global inImageFile, inPaneFile
  
     db.useOneConnection(1)
+    db.set_sqlUser(user)
+    db.set_sqlPassword(passwordFileName)
  
     fdate = mgi_utils.date('%m%d%Y')	# current date
     head, tail = os.path.split(sys.argv[0])
